insert into clickhouse

--- a/StockData/src/main/resources/application.properties
+++ b/StockData/src/main/resources/application.properties
@@ -2,5 +2,9 @@
 spring.application.name=StockData
 # 应用服务 WEB 访问端口
 server.port=8080
+clickhouse.url=jdbc:clickhouse://192.168.149.151:8123
+clickhouse.db=default
+clickhouse.username=default
+
 
 
