--- a/StockData/src/main/resources/application.properties
+++ b/StockData/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # 应用名称
 spring.application.name=StockData
 # 应用服务 WEB 访问端口
-server.port=8080
-clickhouse.url=jdbc:clickhouse://192.168.149.151:8123
+server.port=9012
+clickhouse.url=jdbc:clickhouse://42.192.90.211:8123
 clickhouse.db=default
 clickhouse.username=default
+clickhouse.password=
 
 
 
